[project]
name = "quant-strategy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "datetime>=5.5",
    "matplotlib>=3.10.7",
    "mkdocs>=1.6.1",
    "numpy>=2.3.3",
    "polars>=1.34.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]
