[project]
name = "quant-strategy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.1",
    "altair>=5.5.0",
    "binance>=0.3.76",
    "cryptography>=46.0.3",
    "datetime>=5.5",
    "matplotlib>=3.10.7",
    "mkdocs>=1.6.1",
    "numpy>=2.3.3",
    "polars>=1.34.0",
    "requests>=2.32.5",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]
